# qwen3-call-patch-proxy

./: .gitignore  LICENSE  README.md  call_patch_proxy.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_argument_replacement.py  test_complete_flow.py  test_edit_boolean.py  test_edit_tool.py  test_id_format.py  test_proxy.py  test_task_detection.py  test_tool_inference.py  tool_fixes.yaml
docs/: detailed-guide.md
tests/: test_argument_replacement.py  test_empty_tool_name_fix.py  test_filepath_inference.py  test_filepath_scenario.py  test_fragment_processing.py  test_fragmented_glob_fix.py  test_full_xml_conversion.py  test_id_format.py  test_json_fixes.py  test_path_fragment_scenario.py  test_path_only_inference.py  test_pattern_only_glob.py  test_real_world_scenario.py  test_streaming_xml_detection.py  test_suppression.py  test_task_tool.py  test_xml_tool_call_conversion.py
